--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"CHANGELOG.md"
 	],
 	"scripts": {
-		"build": "node scripts/build.js",
+		"build": "node scripts.js",
 		"build:cjs": "tsc --project tsconfig.cjs.json",
-		"build:esm": "tsc --project tsconfig.esm.json && echo '{\"type\":\"module\"}' > dist/esm/package.json",
+		"build:esm": "tsc --project tsconfig.esm.json",
 		"build:types": "tsc --project tsconfig.types.json",
+		"build:dev": "tsc --project tsconfig.dev.json",
 		"clean": "rimraf dist coverage .tsbuildinfo",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -36,7 +37,9 @@
 		"format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
 		"format:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
 		"typecheck": "tsc --noEmit",
-		"dev": "tsc --watch",
+		"typecheck:cjs": "tsc --project tsconfig.cjs.json --noEmit",
+		"typecheck:esm": "tsc --project tsconfig.esm.json --noEmit",
+		"dev": "tsc --project tsconfig.dev.json --watch",
 		"prepublishOnly": "npm run clean && npm run build && npm run test && npm run lint",
 		"release": "node scripts/release.js",
 		"docs:build": "typedoc src/index.ts --out docs/api",
@@ -57,16 +60,16 @@
 		"mention",
 		"dropdown"
 	],
-	"author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
+	"author": "David Gogniashvili <david.gogniashvili.dg@gmail.com>",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/component/textarea-caret-position.git"
+		"url": "git+https://github.com/component/textarea-caret-ts.git"
 	},
 	"bugs": {
-		"url": "https://github.com/component/textarea-caret-position/issues"
+		"url": "https://github.com/component/textarea-caret-ts/issues"
 	},
-	"homepage": "https://github.com/component/textarea-caret-position#readme",
+	"homepage": "https://github.com/component/textarea-caret-ts#readme",
 	"devDependencies": {
 		"@eslint/config-array": "^0.21.0",
 		"@eslint/js": "^9.30.1",
