--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"prettier": "^3.6.2",
 		"rimraf": "^6.0.1",
 		"ts-jest": "^29.4.0",
+		"ts-node": "^10.9.2",
 		"typedoc": "^0.28.7",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.36.0"
