--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [16.x, 18.x, 20.x]
+                node-version: [18.x, 20.x]
 
         steps:
             - name: Checkout code
@@ -21,7 +21,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
+                  cache: 'npm'
 
             - name: Install dependencies
               run: npm ci
@@ -51,13 +51,10 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: 18.x
-                  cache: "npm"
+                  cache: 'npm'
 
             - name: Install dependencies
               run: npm ci
 
             - name: Build package
               run: npm run build
-
-            - name: Run browser tests
-              run: npm run test:browser
