--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -11,7 +11,7 @@
         // "declarationDir": "dist",
         "strict": true,
         "sourceMap": true,
-        "removeComments": true,
+        "removeComments": false,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "verbatimModuleSyntax": false,
